# CMakeList.txt : CMake project for Lab 1, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.2)

project ("Yuliia_Lab1")

# Add source to this project's executable.
add_executable (Yuliia_Lab1 "Lab 1.cpp" "Lab 1.h")

# TODO: Add tests and install targets if needed.
